--- a/code/mainPage/mainPage.css
+++ b/code/mainPage/mainPage.css
@@ -14,6 +14,9 @@ html {
 #nav {
     padding-right: 8em;
 }
+button.hovered{
+    box-shadow: 0px 0px 10px 0px rgba(0, 255, 0, 1);
+  }
 
 li.nav-item {
     margin: -0.5rem 0rem;
